# esp32s3-ota-example

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  wifi.c  wifi.h  wifi2.c  wifi2.h
